<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/standardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="es.ulpgc.eite.cleancode.calculator.standard.StandardActivity">



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:text="0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textDisplay"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:paddingRight="@dimen/display_padding"
            android:textAlignment="textEnd"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="7"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button7"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:text="8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button8"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:text="9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button9"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="+"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonPlus"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="-"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonMinus"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="Clr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonClear"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button4"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:text="5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button5"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:text="6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button6"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="x"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonMult"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="/"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonDiv"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="Del"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonBackspace"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

        </LinearLayout>




        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:text="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button1"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:text="2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button2"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                android:text="3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button3"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


            <Button
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/button0"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="Undo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonUndo"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:textColor="@android:color/white"
                android:text="="
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/buttonEqual"
                android:layout_weight="1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>




        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
